@@ -41,6 +41,7 @@
 - FIX: Opening web browser does not work on Ubuntu
 - FIX: Validate repository content when loading it (patch from Laurent Cathala)
 - FIX: Podcast file renaming is not possible [2897134]
+- FIX: Progress bar should work for downloaded podcast entries
 
 aTunes 1.13.6
 -------------
